[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/inventory/Asker.gd" type="Script" id=1]
[ext_resource path="res://assets/splashScreen.png" type="Texture" id=2]
[ext_resource path="res://assets/emberfont/emberfont.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/UI/button_notPressed.png" type="Texture" id=4]
[ext_resource path="res://assets/UI/button_pressed.png" type="Texture" id=5]
[ext_resource path="res://assets/UI/tick_pressed.png" type="Texture" id=6]
[ext_resource path="res://assets/UI/tick_notPressed.png" type="Texture" id=7]
[ext_resource path="res://assets/UI/slider_pressed.png" type="Texture" id=8]
[ext_resource path="res://assets/UI/slider_notPressed.png" type="Texture" id=9]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 165, 48, 65, 43 )

[sub_resource type="DynamicFont" id=2]
size = 60
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 41
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 150, 15 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 150, 15 )

[node name="Asker" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BG" type="TextureButton" parent="."]
modulate = Color( 1, 1, 1, 0.490196 )
margin_left = -0.0553589
margin_top = -2.16071
margin_right = 1023.94
margin_bottom = 597.839
texture_normal = SubResource( 1 )
expand = true

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -100.0
margin_right = 300.0
margin_bottom = 100.0
color = Color( 0.109804, 0.109804, 0.109804, 1 )

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_left = 214.0
margin_top = 200.0
margin_right = -212.0
margin_bottom = 297.0
custom_fonts/font = SubResource( 2 )
text = "How much to drop?"
align = 1
valign = 1

[node name="TextureButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -150.0
margin_top = 341.0
margin_right = 150.0
margin_bottom = 389.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="TextureButton"]
margin_right = 300.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 3 )
text = "Confirm"
align = 1
valign = 1

[node name="SpinBox" type="SpinBox" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 146.0
margin_right = 220.0
margin_bottom = 24.0
min_value = 1.0
value = 1.0
exp_edit = true
align = 2

[node name="HSlider" type="HSlider" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -220.0
margin_top = 3.0
margin_right = 120.0
margin_bottom = 19.0
custom_icons/grabber_highlight = ExtResource( 6 )
custom_icons/grabber = ExtResource( 7 )
custom_styles/slider = SubResource( 4 )
custom_styles/grabber_area = SubResource( 5 )
min_value = 1.0
value = 1.0
exp_edit = true
ticks_on_borders = true
[connection signal="pressed" from="BG" to="." method="_on_BG_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_confirm"]
[connection signal="value_changed" from="SpinBox" to="." method="_on_SpinBox_value_changed"]
[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
